--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,10 @@
 }
 @font-face {
     font-family: Roboto;
-    src: url(../font/Roboto-Light.ttf);
+    src: url(../font/Roboto-Medium.ttf);
+}
+*{
+    z-index: 10;
 }
 body {
     background-image: url(../image/dj.png);
@@ -68,7 +71,6 @@ body {
     letter-spacing: 9px;
     color: #ffffff;
     margin-top: 200px;
-    
 }
 #ptitre {
     position: absolute;
@@ -105,13 +107,15 @@ body {
     height: 1292px;
 }
 #article2 {
-    height: 2900px;
+    height: 3000px;
 }
 #bloc1 {
     width: 32%;
     margin-left: 16%;
+    float: left;
 }
 #titre1 {
+    clear: both;
     color: #1b2550;
     font-family: Barlow-bold;
     font-size: 50px;
@@ -140,14 +144,14 @@ body {
     margin-top: 150px;
     width: 100%;
 }
-#soustitre1 {
+.soustitre1 {
     color: #303342;
     font-family: Barlow-bold;
     font-size: 36px;
     font-weight: 400;
     line-height: 72px;
 }
-#date1 {
+.date1 {
     color: #484b59;
     font-family: Barlow-medium;
     font-size: 16px;
@@ -157,7 +161,7 @@ body {
     letter-spacing: 3.2px;
     display: inline-block;
 }
-#tour {
+.tour {
     color: #fb516e;
     background-color: #1b2550;
     width: 50px;
@@ -169,7 +173,7 @@ body {
     letter-spacing: 3.2px;
     margin-left: 25px;
 }
-#paragraphe1 {
+.paragraphe1 {
     color: #7c8092;
     font-family: Roboto;
     font-size: 16px;
@@ -243,4 +247,582 @@ body {
 }
 #smoke {
     width: 100%;
+    margin-top: 284px;
 }
+#paragraphe3-1 {
+    color: #7c8092;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 30px;
+}
+.traitbleu3 {
+    width: 4px;
+    height: 18px;
+    background-color: #052c9a;
+    display: inline-block;
+    margin-top: 50px;
+}
+#readmore3 {
+    color: #052c9a;
+    font-family: Barlow-medium;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
+    display: inline-block;
+    position: absolute;
+    margin-top: 45px;
+    margin-left: 25px;
+}
+#bloc2 {
+    width: 32%;
+    margin-left: 4%;
+    display: inline-block;
+}
+#news4 {
+    width: 70%;
+}
+
+#readmore4 {
+    color: #052c9a;
+    font-family: Barlow-medium;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2.8px;
+    display: inline-block;
+    position: absolute;
+    margin-top: 45px;
+    margin-left: 25px;
+}
+#sorciere {
+    width: 100%;
+    margin-top: 111px;
+}
+#bulles {
+    position: absolute;
+    margin-top:-50px;
+    margin-left: 20%;
+}
+#zbeub {
+    margin-top: 131px;
+}
+#button2 {
+    position: absolute;
+    display: block;
+    margin-top: 490px;
+    margin-left: 41.75%;
+    width: 16.5%;
+    height: 80px;
+    background-color: #032c9e;
+    color: #ffffff;
+    font-family: Barlow-medium;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 30px;
+    text-transform: uppercase;
+    letter-spacing: 3.6px;
+    border-style: unset;
+}
+#fond {
+    width: 100%;
+    margin: 0;
+    position: absolute;
+    z-index: 2;
+}
+#mimusic {
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    position: absolute;
+    color: #ffffff;
+    font-family: Barlow-bold;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 19px;
+    margin-top: 600px;
+}
+#traitmulticolor2 {
+    position: absolute;
+    margin-top: 660px;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+}
+#bleu2 {
+    width: 146px;
+    height: 4px;
+    background-color: #33cbcc;
+    display: inline-block;
+}
+#violet2 {
+    width: 20px;
+    height: 4px;
+    background-color: #032c9e;
+    display: inline-block;
+}
+#vert2 {
+    width: 10px;
+    height: 4px;
+    background-color: #6aff7f;
+    display: inline-block;
+}
+#pmimusic {
+    position: absolute;
+    margin-top: 750px;
+    margin-left: 10%;
+    width: 80%;
+    text-align: center;
+    color: #778fc3;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 19px;
+}
+#block1 {
+    width: 18%;
+    margin-left: 19%;
+    display: inline-block;
+    position: absolute;
+    margin-top: 1002px;
+}
+#block2 {
+    width: 22%;
+    margin-left: 39%;
+    display: inline-block;
+    position: absolute;
+    margin-top: 837px;
+}
+#block3 {
+    width: 18%;
+    margin-left: 63%;
+    display: inline-block;
+    position: absolute;
+    margin-top: 877px;
+}
+#singer {
+    width: 100%;
+}
+#carrejaune {
+    width: 54%;
+    margin-top: 64px;
+    margin-left: 38%;
+}
+#carrebleu {
+    width: 10%;
+    display: block;
+    margin-left: 60%;
+    margin-top: 121px;
+}
+#album1 {
+    width: 100%;
+    margin-top: 60px;
+}
+#petitcarre {
+    display: block;
+    margin-left:69%;
+}
+#grandcarrebleu {
+    margin-left: 10%;
+    margin-top: 70px;
+}
+#album2 {
+    width: 100%;
+    margin-top: 39px;
+}
+#album3 {
+    width: 100%;
+}
+#allfalldown {
+    width: 70%;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 65px;
+    text-transform: uppercase;
+    position: absolute;
+    margin-top: -150px;
+    margin-left: 10%;
+    color: white;
+}
+#letmedown {
+    width: 70%;
+    margin-left: 15%;
+    font-family: Barlow-bold;
+    color: #ffffff;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 700;
+    line-height: 65px;
+    text-transform: uppercase;
+    letter-spacing: -0.56px;
+    margin-top: -250px;
+}
+#annee {
+    color: #ffffff;
+    font-family: Barlow-medium;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 65px;
+    text-transform: uppercase;
+    letter-spacing: 21.84px;
+    width: 50%;
+    margin-left: 26%;
+    text-align: center;
+    margin-top: -25px;
+}
+#viewalbum {
+    width: 50%;
+    margin-left: 25%;
+    text-align: center;
+    position: absolute;
+    margin-top: 1700px;
+    color: #ffffff;
+    font-family: Barlow-medium;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 19px;
+}
+#bubbles {
+    margin-left: 72%;
+    margin-top: 1600px;
+}
+#fondguitariste {
+    position: absolute;
+    width: 100%;
+    margin-top: -55px;
+    z-index: 1;
+}
+#rectangle1 {
+    width: 11%;
+    display: inline-block;
+    position: absolute;
+    z-index: 15;
+    margin-left: 18%;
+    margin-top: 450px;
+}
+#beingsocial{
+    width: 100%;
+    color: #ffffff;
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 80px;
+    font-family: Barlow-bold;
+    z-index: 15;
+    margin-bottom: 0;
+}
+#traitmulticolor3 {
+
+    width: 100%;
+    text-align: center;
+}
+#bleu3 {
+    width: 136px;
+    height: 4px;
+    background-color: #33cbcc;
+    display: inline-block;
+}
+#violet3 {
+    width: 20px;
+    height: 4px;
+    background-color: #032c9e;
+    display: inline-block;
+}
+#vert3 {
+    width: 10px;
+    height: 4px;
+    background-color: #6aff7f;
+    display: inline-block;
+}
+.listeguitar {
+    transition: 0.3s;
+    color: #ffffff;
+    font-family: Barlow-bold;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 60px;
+    text-transform: uppercase;
+    list-style-type: none;
+}
+.listeguitar:hover {
+    transition: 0.5s;
+    color: #fb516e;
+    cursor: pointer;
+}
+#ulguitar {
+    padding: 0;
+}
+#rectangle2 {
+    width: 20%;
+    display: inline-block;
+    position: absolute;
+    margin-left: 38%;
+    margin-top: 310px;
+}
+#filtre1 {
+    background-color: rgba(191, 191, 191, 0.11);
+    border-radius: 4px;
+    width: 100%;
+    height: 300px;
+}
+.allawalker {
+    color: #ffffff;
+    font-family: Barlow-bold;
+    font-size: 26px;
+    font-weight: 400;
+    line-height: 38px;
+    width: 80%;
+    margin-left: 10%;
+    padding-top: 50px;
+}
+#logoytb {
+    padding-left: 10%;
+    display: inline-block;
+}
+#droiteytb {
+    display: inline-block;
+    margin-left: 20px;
+}
+.mimusic2 {
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    margin: 0;
+}
+.date2 {
+    color: #778fc3;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    font-family: Barlow-medium;
+    letter-spacing: 1.6px;
+    margin: 0;
+}
+#concert {
+    width: 100%;
+    margin-bottom: 50px;
+}
+#filtre2 {
+    margin-top: 30px;
+    background-color: rgba(191, 191, 191, 0.11);
+    border-radius: 4px;
+    width: 100%;
+    height: 466px;
+}
+.pconcert {
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 0;
+    margin-top: 0;
+    color: #ffffff;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 5px;
+}
+.lienconcert {
+    width: 70%;
+    margin-left: 15%;
+    margin-bottom: 0;
+    color: #6aff7f;
+    font-family: Roboto;
+    margin-top: 5px;
+}
+#logofacebook {
+    margin-top: 20px;
+    margin-left: 15%;
+    display: inline-block;
+}
+#droitefacebook {
+    display: inline-block;
+    margin-left: 20px;
+}
+#rectangle3 {
+    width: 20%;
+    display: inline-block;
+    position: absolute;
+    margin-left: 60%;
+    margin-top: 450px;
+}
+#filtre3 {
+    width: 100%;
+    height: 416px;
+    background-color: rgba(191, 191, 191, 0.11);
+    border-radius: 4px;
+}
+#bannieremeuf {
+    width: 100%;
+}
+#logotwitter {
+    display: inline-block;
+    margin-left: 15%;
+    margin-top: 20px;
+}
+#droitetwitter {
+    display: inline-block;
+    margin-left: 20px;
+}
+#filtre4 {
+    width: 100%;
+    height: 320px;
+    background-color: rgba(191, 191, 191, 0.11);
+    border-radius: 4px;
+    margin-top: 30px;
+}
+#logoyoutube {
+    display: inline-block;
+    margin-left: 15%;
+}
+#rightytb {
+    display: inline-block;
+    margin-left: 20px;
+}
+#fondfooter {
+    z-index: 1;
+    width: 100%;
+    margin-top: 1284px;
+    position: absolute;
+}
+#signup {
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+    font-family: Barlow-bold;
+    font-size: 60px;
+    font-weight: 400;
+    line-height: 19px;
+    position: absolute;
+    margin-top: 1600px;
+}
+#traitmulticolor4 {
+    position: absolute;
+    margin-top: 1660px;
+    width: 80%;
+    margin-left: 10%;
+    text-align: center;
+    z-index: 50;
+}
+#bleu4 {
+    width: 146px;
+    height: 4px;
+    background-color: #33cbcc;
+    display: inline-block;
+}
+#violet4 {
+    width: 20px;
+    height: 4px;
+    background-color: #032c9e;
+    display: inline-block;
+}
+#vert4 {
+    width: 10px;
+    height: 4px;
+    background-color: #6aff7f;
+    display: inline-block;
+}
+#psignup {
+    position: absolute;
+    width: 100%;
+    margin-top: 1700px;
+    text-align: center;
+    color: #778fc3;
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 19px;
+}
+.enjoy-css {
+    display: inline-block;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    width: 300px;
+    padding: 10px 1px 10px 20px;
+    border: 0 solid rgba(255,255,255,1);
+    border-bottom: 1px solid #b7b7b7;
+    font: normal 16px/normal "Times New Roman", Times, serif;
+    color: rgba(255,255,255,1);
+    -o-text-overflow: clip;
+    text-overflow: clip;
+    background: rgba(255,255,255,0);
+    -webkit-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -moz-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    -o-transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    transition: all 200ms cubic-bezier(0.42, 0, 0.58, 1);
+    
+  }
+  #input1 {
+    position: absolute;
+    margin-top: 1800px;
+    margin-left: 41%;
+  }
+  #input2 {
+    position: absolute;
+    margin-top: 1900px;
+    margin-left: 41%;
+  }
+  #ladivdulogo {
+      position: absolute;
+      margin-top: 2100px;
+      width: 18%;
+      margin-left: 36%;
+      text-align: center;
+  }
+  #logo2 {
+      width: 25%;
+      display: inline-block;
+  }
+  #pdulogo {
+      display: inline-block;
+      position: absolute;
+      margin-top: 20px;
+      margin-left: 10px;
+      color: #ffffff;
+      font-family: Barlow-bold;
+      font-size: 36px;
+      font-weight: 700;
+      line-height: 18px;
+      text-transform: uppercase;
+      letter-spacing: 12px;
+  }
+  #ulfooter {
+      position: absolute;
+      margin-top: 2200px;
+      display: inline-flex;
+      flex-direction: row;
+      list-style-type: none;
+      width: 25%;
+      margin-left: 37.5%;
+      text-align: center;
+  }
+  .lifooter {
+      transition: 0.4s;
+      margin-left: 30px;
+      color: #48547c;
+      font-family: Barlow-medium;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 12px;
+      text-transform: uppercase;
+  }
+  .lifooter:hover {
+    transition: 0.5s;
+    color: #ffffff;
+    cursor: pointer;
+  }
+  #awesome {
+      position: absolute;
+      margin-top: 2250px;
+      color: #ffffff;
+      text-align: center;
+      width: 50%;
+      margin-left: 25%;
+  }
+  .Awesome {
+      margin-left: 30px;
+  }
